Section#Clients - incorrect spacing and sizing inside tooltip  [fixed]

--- a/scss/mixins/our-clients/_case-study-link.scss
+++ b/scss/mixins/our-clients/_case-study-link.scss
@@ -1,39 +1,42 @@
 @mixin case-study-link($theme){
-    width: auto;
-    display: block;
-    color: #fff;
-    height: auto;
-    line-height: 35px;
-    padding: 5px 15px;
-    text-transform: uppercase;
-    font-size: 1.063rem;
-    border-radius: 3px;
-    white-space: normal;
-    display: inline-block;
-    margin-bottom: 0;
-    font-weight: 400;
-    text-align: center;
-    background-image: none;
-    border: 1px solid transparent;
-    user-select: none;
-    background-color: $theme;
-    border-color: $theme;
-    &:hover{
-        @if $theme and $theme == $buttercup{
-            background-color: $buttercup-hover;
-            border-color: $buttercup-hover-border-color;
-        }
-        @if $theme and $theme == $havelockBlue{
-            background-color:  $havelockBlue-clients-hover-bg-color;
-            border-color: $havelockBlue-clients-hover-border-color;
-        }
-        @if $theme and $theme == $shamrock{
-            background-color: $shamrock-clients-hover-bg-color;
-            border-color: $shamrock-clients-hover-border-color;
-        }
-        @if $theme and $theme == $wisteria{
-            background-color: $wisteria-clients-hover-bg-color;
-            border-color: $wisteria-clients-hover-border-color;
+    &.case-study-link{
+        width: 242px;
+        display: block;
+        align-self: center;
+        color: #fff;
+        height: auto;
+        line-height: 35px;
+        padding: 5px 10px;
+        text-transform: uppercase;
+        font-size: 1.063rem;
+        border-radius: 3px;
+        white-space: normal;
+        // display: inline-block;
+        margin-bottom: 0;
+        font-weight: 400;
+        text-align: center;
+        background-image: none;
+        border: 1px solid transparent;
+        user-select: none;
+        background-color: $theme;
+        border-color: $theme;
+        &:hover{
+            @if $theme and $theme == $buttercup{
+                background-color: $buttercup-hover;
+                border-color: $buttercup-hover-border-color;
+            }
+            @if $theme and $theme == $havelockBlue{
+                background-color:  $havelockBlue-clients-hover-bg-color;
+                border-color: $havelockBlue-clients-hover-border-color;
+            }
+            @if $theme and $theme == $shamrock{
+                background-color: $shamrock-clients-hover-bg-color;
+                border-color: $shamrock-clients-hover-border-color;
+            }
+            @if $theme and $theme == $wisteria{
+                background-color: $wisteria-clients-hover-bg-color;
+                border-color: $wisteria-clients-hover-border-color;
+            }
         }
     }
 }
