--- a/scss/mixins/our-clients/_tooltip-arrow.scss
+++ b/scss/mixins/our-clients/_tooltip-arrow.scss
@@ -4,5 +4,5 @@
     height: 0; 
     border-left: 40px solid transparent;
     border-right: 40px solid transparent;
-    border-top: 40px solid #333645;
+    border-top: 38px solid #333645;
 }
