--- a/scss/mixins/our-clients/_tooltip.scss
+++ b/scss/mixins/our-clients/_tooltip.scss
@@ -1,9 +1,9 @@
 @mixin tooltip($theme){
     background-color: #333645;
     color: #fff;
-    padding: 20px 15px;
+    width: 280px;
+    padding: 20px;
     font-size: .875rem;
-    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -15,7 +15,7 @@
         text-align: center;
     }
     p{
-        padding: 10px;
+        margin: 15px auto 10px;
         line-height: 1.6;
         text-align: center;
         > a{
@@ -24,6 +24,7 @@
             border: none;
             outline: none;
             padding: 0;
+            color: white;
             text-transform: capitalize;
             font-size: .875rem;
             &:hover{
